--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/lab": "^5.0.0-alpha.137",
+    "@mui/material": "^5.14.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "colorthief": "^2.4.0",
+    "framer-motion": "^10.12.22",
     "react": "^18.2.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
+    "react-flip-toolkit": "^7.1.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.2",
+    "valtio": "^1.10.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
